--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
     <meta charset="utf-8">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <title>My test page</title>
+    <title>About Jonathan</title>
   </head>
   <body>
-    <h1>My Slice of the Internet</h1>
-    <img src="images/internet.jpeg" alt="My test image">
-    <p>This is my little slice of the internet. Thanks for stopping by!</p>
-    <p>Now please either:</p>
-    <ul><li>leave.</li>
-      <li>don't leave.</li></ul>
-    <p>The choice is all yours!</p>
-    <p>(If you're having trouble thinking of where to go next, consider visiting our friends over at <a href="https://www.twitter.com">Twitter.</a>)</p>
-    <button>Change user</button>
+    <h1></h1>
+    <button>Who Goes There?</button>
+    <h3>So you're trying to learn more about Jonathan?</h3>
+    <img src="images/cat.gif" alt="My test image">
+    <p>That's fair, size up your competition. Below is a list of his strengths and weaknesses.</p>
+    <div class="row">
+      <div class="column">
+        <p>Weaknesses:</p>
+        <ul><li>frequent heartburn</li>
+          <li>Penicillin</li>
+          <li>About Me pages</ul>
+      </div>
+      <div class="column">
+        <p>Strengths:</p>
+        <ul><li>unwelcome ironic sense of humor</li>
+          <li>cheese boards</li>
+          <li>parallel parking</ul>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <p>If you'd like to learn more about Jonathan, you might want to try talking to him in person.</p>
     <script src="scripts/main.js"></script>
   </body>
 </html>
