starting withe a clean slate

--- a/index.html
+++ b/index.html
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <title>About Jonathan</title>
-  </head>
-  <body>
-    <h1></h1>
-    <button>Who Goes There?</button>
-    <h3>So you're trying to learn more about Jonathan?</h3>
-    <img src="images/cat.gif" alt="My test image">
-    <p>That's fair, size up your competition. Below is a list of his strengths and weaknesses.</p>
-    <div class="row">
-      <div class="column">
-        <p>Weaknesses:</p>
-        <ul><li>frequent heartburn</li>
-          <li>Penicillin</li>
-          <li>About Me pages</ul>
-      </div>
-      <div class="column">
-        <p>Strengths:</p>
-        <ul><li>unwelcome ironic sense of humor</li>
-          <li>cheese boards</li>
-          <li>parallel parking</ul>
-      </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <p>If you'd like to learn more about Jonathan, you might want to try talking to him in person.</p>
-    <script src="scripts/main.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Jonathan Ray</title>
+</head>
+
+<body>
+  <p>Turn around kid, this ain't pretty.</p>
+  <p>(yet)</p>
+</body>
 </html>
