adds functionality for centering text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <p>Turn around kid, this ain't pretty.</p>
-  <p>(yet)</p>
+  <div class="constructor">
+    <p>Turn around kid, this ain't pretty.</p>
+    <p>(yet)</p>
+</div>
 </body>
 </html>
